# JSWebApp-EVS

./: README.md  app.py  requirements.txt  secondaries.py
EVSProj/: 1.cpp  2.cpp  CMakeLists.txt
static/: binary.jfif  styles.css
templates/: Homepage.html  counter.html  homepage.html
